fix: dialog header should have spacing between actions and heading

--- a/src/client/css/connect.css
+++ b/src/client/css/connect.css
@@ -14,6 +14,7 @@
 
 		& > header {
 			display: flex;
+			gap: 16px;
 			align-items: center;
 			justify-content: space-between;
 
